# abarqueroc-tfm-uoc

./: .gitignore  Dockerfile  LICENSE  README.md  credit-card-fraud.html  credit-card-fraud.ipynb  data-analysis.ipynb  data-explore.ipynb  notebook.ipynb  pyproject.toml  requirements.txt
