[tool.poetry]
name = "abarqueroc-tfm-uoc"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.4.2"
seaborn = "^0.11.2"
scipy = "^1.8.0"
jupyter = "^1.0.0"
sklearn = "^0.0"
imbalanced-learn = "^0.9.0"
tabulate = "^0.8.9"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
